# leadable

./: .dockerignore  .env.example  .env.sample  .gitignore  Dockerfile  Makefile  README.md  aqua.yaml  compose.yaml  main.py  manual_translate_pdf.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: ci.yaml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/src/: main.py  model.py  pdf_edit.py  rabbitmq.py  translate.py  translate_ollama.py  utils.py  worker.py
backend/src/mcp/: duckduckgo.py  qdrant.Dockerfile
backend/src/service/: db.py  health.py  llm.py  log.py  mq.py  resource.py  storage.py  translate.py  worker.py
frontend/: Caddyfile  Dockerfile  README.md  biome.json  index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ApiKeyInput.tsx  FileList.tsx  FileUploader.tsx  LLMSettings.tsx  Navbar.tsx  ResourceMonitor.tsx  TaskDetail.tsx
frontend/src/types/: type.ts
modules/: pdf_edit.py  spacy_api.py  translate.py  translate_ollama.py
src/: main.py  pdf_edit.py  translate.py
