[project]
name = "leadable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "en-core-web-sm",
    "fastapi>=0.115.0",
    "ja-core-news-sm",
    "numpy<2",
    "ollama>=0.3.3",
    "pillow>=10.4.0",
    "pymupdf>=1.24.10",
    "spacy==3.7.4",
    "tenacity>=9.0.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz" }
ja-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/ja_core_news_sm-3.7.0/ja_core_news_sm-3.7.0.tar.gz" }
