[project]
name = "leadable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.4.0",
    "beautifulsoup4>=4.13.3",
    "discord-webhook>=1.4.1",
    "en-core-web-sm",
    "fastapi[standard]>=0.112.2",
    "ja-core-news-sm",
    "litellm>=1.63.12",
    "mcp[cli]>=1.6.0",
    "minio>=7.2.15",
    "nanoid>=2.0.0",
    "numpy<2",
    "ollama>=0.3.3",
    "pika>=1.3.2",
    "pillow>=10.4.0",
    "psutil>=6.1.1",
    "pymongo>=4.11.3",
    "pymupdf>=1.24.10",
    "requests>=2.32.3",
    "spacy==3.7.5",
    "tenacity>=9.0.0",
]

[tool.uv]
dev-dependencies = [
    "fastapi-cli>=0.0.5",
    "taskipy>=1.14.1",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz" }
ja-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/ja_core_news_sm-3.7.0/ja_core_news_sm-3.7.0.tar.gz" }

[tool.taskipy.tasks]
check = "uv run task lint && uv run task format"
lint = "uvx ruff check --fix --extend-select I"
format = "uvx ruff format ."
